# backend/app/Models/account.php
@@ -6,8 +6,10 @@ use Illuminate\Database\Eloquent\Factories\HasFactory;
 // use Illuminate\Database\Eloquent\Model;
 use MongoDB\Laravel\Eloquent\Model;
 
+
 class account extends Model
 {
     use HasFactory;
+    protected $collection = 'accounts';
     public $timestamps = false;
 }
